--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,75 @@
-
+/* 
 .Navbar {
    text-decoration: none;
    margin :50px 
    
-}
+} */
+
+.Navbar {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 10px;
+   background-color: #333;
+ }
+ 
+ .link {
+   color: #fff;
+   text-decoration: none;
+   padding: 5px;
+ }
+ 
+ .link:hover {
+   background-color: #555;
+ }
+ 
+ .profile-container {
+   position: relative;
+ }
+ 
+ .dropdown {
+   position: absolute;
+   top: 100%;
+   right: 0;
+   background-color: #333;
+   color: #fff;
+   display: none;
+ }
+ 
+ .profile-container:hover .dropdown {
+   display: block;
+ }
+ 
+ .dropbtn {
+   color: #fff;
+   background-color: #333;
+   border: none;
+   cursor: pointer;
+   padding: 5px;
+ }
+ 
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #333;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+   z-index: 1;
+ }
+ 
+ .dropdown-content a {
+   color: #fff;
+   padding: 5px 10px;
+   text-decoration: none;
+   display: block;
+ }
+ 
+ .dropdown-content a:hover {
+   background-color: #555;
+ }
+ 
+ .dropdown:hover .dropdown-content {
+   display: block;
+ }
 
 
