--- a/src/pages/Authentication/Authentication.css
+++ b/src/pages/Authentication/Authentication.css
@@ -1,3 +1,20 @@
-.title {
-    color: brown
+.loginContainer {
+position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
+
+.title {
+    color: pink
+}
+
+.subtitle {
+    padding-bottom: 20px;
+  }
