--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,6 @@
 .title {
-  color: blue;
+  color: pink;
+  text-align: center;
 }
 
 .post-image {
@@ -7,7 +8,6 @@
   height: "80%";
   object-fit: "cover";
   border-radius: "10px";
-  border: 1px solid black
 }
 
 .caption-and-likes{
