--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,20 +3,29 @@
   text-align: center;
 }
 
+ .post-container {
+  width: 150px; 
+  height: 150px; 
+  border-radius: 10px;
+  overflow: hidden; 
+  margin: 10px; 
+}
+
 .post-image {
-  width: "80%";
-  height: "80%";
-  object-fit: "cover";
-  border-radius: "10px";
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover;
 }
 
-.caption-and-likes{
-    display: "flex";
-    align-items: "center"
+
+.caption-and-likes {
+  padding: 10px; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.caption{
-    font-size: "1.2rem";
-    margin-right: "10px";
+.caption {
+  font-size: 1.2rem;
+  margin-right: 10px;
 }
-
