--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,10 +1,9 @@
 .profilePic {
-    width: 200px; /* adjust the size to your liking */
+    width: 200px; 
     height: 200px;
-    border-radius: 50%; /* makes the image a circle */
+    border-radius: 50%; 
     object-fit: cover; /* ensures the image is fully visible within the circle */
-    border: 2px solid #ddd; /* adds a slight border around the image */
-    margin: 10px; /* adds some space around the image */
+    border: 2px solid #ddd; 
+    margin: 10px;
   }
 
-  
